# FPA

./: README.md
complex_animation/: CMakeLists.txt
complex_animation/01/: CMakeLists.txt  main.cpp
lw1/: ab.cpp  abc.cpp  hello_err.cpp  linear_equation.cpp  lw1_1.cpp  lw1_3.cpp  square  square_equation.cpp
sfml.1/: CMakeLists.txt  README.md
sfml.1/00/: main.cpp
sfml.1/01/: CMakeLists.txt  main.cpp
sfml.1/02/: CMakeLists.txt  main.cpp  main_1.cpp  main_2.cpp
sfml.1/03/: CMakeLists.txt  house.cpp  main.cpp
sfml.2/: CMakeLists.txt
sfml.2/00/: CMakeLists.txt  main.cpp
sfml.2/01/: main.cpp
sfml.2/02/: CMakeLists.txt  main.cpp
sfml.2/03/: CMakeLists.txt  main.cpp
sfml.2/sfml2_1/: CMakeLists.txt  main.cpp
sfml.2/sfml2_2/: CMakeLists.txt  main.cpp
sfml_3/: CMakeLists.txt
sfml_3/00/: CMakeLists.txt  main.cpp
sfml_3/01/: CMakeLists.txt  main.cpp
sfml_3/02/: CMakeLists.txt  main.cpp
sfml_3/03/: CMakeLists.txt  main.cpp
sfml_3/sfml_3_1/: CMakeLists.txt  main.cpp
sfml_3/sfml_3_2/: CMakeLists.txt  main.cpp
test_project/: CMakeLists.txt  main.cpp
workshop_1/: CMakeLists.txt
workshop_1/workshop_1_1/: CMakeLists.txt  main.cpp  pseudocode.txt
workshop_1/workshop_1_2/: CMakeLists.txt  main.cpp  pseudocode.txt
workshop_1/workshop_1_3/: CMakeLists.txt  main.cpp  pseudocode.txt
workshop_1/workshop_1_4/: CMakeLists.txt  main.cpp  pseudocode.txt
workshop_2/: CMakeLists.txt
workshop_2/01/: main.cpp
workshop_2/02/: CMakeLists.txt  main.cpp
workshop_2/03/: CMakeLists.txt  main.cpp
workshop_2/04/: CMakeLists.txt  main.cpp
